# julia-compiler-tracker

./: .gitignore  AGENTS.md  ANALYSIS_GUIDE.md  CLAUDE.md  README.md  TODO.md  compiler_changes.json
.claude-plugin/: plugin.json
analyses/: pr_55455.yaml  pr_55601.yaml  pr_55669.yaml  pr_56201.yaml  pr_56777.yaml  pr_57977.yaml  pr_58107.yaml  pr_58352.yaml  pr_59165.yaml  pr_59413.yaml  pr_59459.yaml  pr_59521.yaml  pr_59600.yaml  pr_59678.yaml  pr_59692.yaml  pr_59700.yaml  pr_59705.yaml  pr_59729.yaml  pr_59740.yaml  pr_59742.yaml  pr_59746.yaml  pr_59766.yaml  pr_59773.yaml  pr_59775.yaml  pr_59784.yaml  pr_59785.yaml  pr_59787.yaml  pr_59793.yaml  pr_59841.yaml  pr_59849.yaml  pr_59850.yaml  pr_59870.yaml  pr_59878.yaml  pr_59886.yaml  pr_59888.yaml  pr_59908.yaml  pr_59915.yaml  pr_59916.yaml  pr_59920.yaml  pr_59921.yaml  (+83 more)
analyses-non-compiler/: pr_54575.yaml  pr_59466.yaml  pr_59539.yaml  pr_59573.yaml  pr_59757.yaml  pr_59759.yaml  pr_59776.yaml  pr_59817.yaml
changelogs/: v1.13-compiler-changelog.md  v1.14-compiler-changelog.md
compiler-deep-dive/: 00-overview.md  01-type-inference.md  02-type-lattice.md  03-tfuncs.md  04-ssa-ir.md  05-optimization.md  06-escape-analysis.md  07-effects.md  08-caching.md  09-journey-method-call.md  10-journey-type-instability.md  11-practical-debugging.md  12-method-dispatch.md  13-lowering.md  14-codegen.md  15-specialization-limits.md  16-precompilation.md  README.md  interconnect-map.md
gh-utils/: .gitignore  pyproject.toml
gh-utils/src/gh_utils/: __init__.py  cache.py  client.py  filter.py  pr.py
(+697 files in other folders)
